# tech-weekly

./: api.py  app.py  index.html  pyproject.toml  requirements.txt  solve  styles.css  tech_weekly.py
.github/workflows/: main.yml
